--- a/quickstart/application/configs/application.ini
+++ b/quickstart/application/configs/application.ini
@@ -8,8 +8,8 @@ appnamespace = "Application"
 resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
 resources.frontController.params.displayExceptions = 0
 
-resources.layout.layout="layout"
-resources.layout.layoutPath = APPLICATION_PATH "/layouts/scripts"
+//resources.layout.layout="layout"
+//resources.layout.layoutPath = APPLICATION_PATH "/layouts/scripts"
 
 resources.db.adapter = "PDO_MYSQL"
 resources.db.params.dbname = "userstaff"
