restful api done and getlist, insertdata

--- a/quickstart/application/configs/application.ini
+++ b/quickstart/application/configs/application.ini
@@ -17,6 +17,9 @@ resources.db.params.host = "localhost"
 resources.db.params.username = "root"
 resources.db.params.password = "123456"
 
+rest.default = "json"
+rest.formats[] = "json"
+rest.formats[] = "xml"
 threescale.api_key = fea6bd766927f0a1b1115f9cac7ce135
 
 [staging : production]
